<resources>
    <string name="app_name">Food4Health</string>

    <string name="SYS_DEVELOP">Zona en desarrollo: Estamos trabajando en ello...</string>

    <!-- PAGE NAME STRINGS -->
    <string name="PG_MAINPAGE">Página Principal</string>
    <string name="PG_REGISTER">Registro</string>
    <string name="PG_LOGIN">Ingreso</string>
    <string name="PG_MAINMENU">Menú</string>
    <string name="PG_ADDRECIPE">Nueva Receta</string>
    <string name="PG_CATALOG">Catálogo de Recetas</string>
    <string name="PG_SETRECIPE">Modificar Receta</string>
    <string name="PG_FAVOURITES">Recetas favoritas</string>
    <string name="PG_MYRECIPES">Mis Recetas</string>
    <string name="PG_ACCOUNT">Mi Cuenta</string>


    <!-- FORMS STRINGS -->
    <string name="FR_NAME">Nombre:</string>
    <string name="FR_LASTNAME1">Primer Apellido:</string>
    <string name="FR_LASTNAME2">Segundo Apellido:</string>
    <string name="FR_NIF">NIF:</string>
    <string name="FR_EMAIL">Correo Electrónico:</string>
    <string name="FR_PASSWORD">Contraseña:</string>
    <string name="FR_RECIPENAME">Nombre:</string>
    <string name="FR_DESCRIPTION">Descripción:</string>
    <string name="FR_INGREDIENTS">Ingredientes:</string>
    <string name="FR_ADDINGREDIENT">AÑADIR OTRO IGREDIENTE</string>
    <string name="FR_PREPARATION">Preparación:</string>
    <string name="FR_ADDSTEP">AÑADIR OTRO PASO</string>
    <string name="FR_SUGGESTION">Sugerencias:</string>

    <!-- FORMS HINT STRINGS -->
    <string name="FRH_NAME">Nombre de Usuario</string>
    <string name="FRH_LASTNAME1">Primer Apellido del Usuario</string>
    <string name="FRH_LASTNAME2">Segundo Apellido del Usuario</string>
    <string name="FRH_NIF">NIF del Usuario</string>
    <string name="FRH_EMAIL">Correo Electrónico del Usuario</string>
    <string name="FRH_PASSWORD">Contraseña del Usuario</string>
    <string name="FRH_REPEAT_PASSWORD">Repite Contraseña del Usuario</string>
    <string name="FRH_RECIPENAME">Nombre de la Receta</string>
    <string name="FRH_DESCRIPTION">Descripción de la Receta</string>
    <string name="FRH_INGREDIENTS">Ingrediente</string>
    <string name="FRH_PREPARATION">Paso</string>
    <string name="FRH_SUGGESTION">Sugerencias del creador</string>

    <!-- MENU STRINGS -->
    <string name="MN_CATALOGUE">CATÁLOGO</string>
    <string name="MN_FAVOURITES">FAVORITOS</string>
    <string name="MN_UPLOAD_RECIPE">SUBIR RECETA</string>
    <string name="MN_ACCOUNT">MI CUENTA</string>

    <!-- BUTTONS STRINGS -->
    <string name="BTN_ACCEPT">ACEPTAR</string>
    <string name="BTN_CANCEL">CANCELAR</string>
    <string name="BTN_LOGIN">ENTRAR</string>
    <string name="BTN_REGISTER">REGISTARSE</string>
    <string name="BTN_ADDRECIPE">AÑADIR</string>
    <string name="BTN_SETRECIPE">MODIFICAR</string>
    <string name="BTN_DELETERECIPE">BORRAR</string>
    <string name="BTN_SETACCOUNT">ACTUALIZAR</string>
    <string name="BTN_DELETEACCOUNT">BORRAR CUENTA</string>
    <string name="BTN_UPDATERECIPE">ACTUALIZAR</string>
    <string name="BTN_SEARCH">BUSCAR</string>

    <!-- ERROR MESSAGES -->
    <string name="ERR_REGISTER_FAILURE">No se ha podido completar el registro, por favor, inténtelo más tarde.</string>
    <string name="ERR_ADDRECIPE_FAILURE">No se ha podido subir la receta, por favor, inténtelo más tarde.</string>
    <string name="ERR_GETRECIPE_FAILURE">No se han podido rescatar los recursos, inténtelo más tarde.</string>
    <string name="ERR_DELETERECIPE_FAILURE">No se ha podido eliminar la receta, inténtelo más tarde.</string>
    <string name="ERR_LOGIN_FAILURE">No se ha podido iniciar sesión, por favor, revisa tus datos e inténtelo de nuevo.</string>
    <string name="ERR_UPDATEACCOUNT_FAILURE">No se ha podido actualizar tu cuenta, inténtelo más tarde.</string>
    <string name="ERR_UPDATEAVATAR_FAILURE">No se ha podido actualizar tu avatar, inténtelo más tarde.</string>
    <string name="ERR_UPDATERECIPEIMAGE_FAILURE">No se ha podido actualizar la imagen de tu receta, inténtelo más tarde.</string>
    <string name="ERR_DELETEACCOUNT_FAILURE">No se ha podido borrar tu cuenta, inténtelo más tarde.</string>
    <string name="ERR_PERMISSION_GALLERY">No se podrá acceder al almacenamiento del dispositivo hasta que concedas todos los permisos.</string>
    <string name="ERR_SET_LIKES">No se ha podido guardar tu voto, por favor, inténtalo mas tarde...</string>
    <string name="ERR_SEARCH">Vaya, no tenemos ninguna receta con ese nombre...</string>

    <!-- APP MESSAGES MESSAGES -->
    <string name="MSG_ADDRECIPE_SUCCESS">¡¡ La receta se ha subido con éxito !!.</string>
    <string name="MSG_DELETERECIPE_SUCCESS">¡¡ La receta se ha eliminado con éxito !!.</string>
    <string name="MSG_UPDATERECIPEIMAGE_AVATAR">¡¡ La imagen de tu receta ha sido actualizada correctamente !!.</string>
    <string name="MSG_UPDATE_ACCOUNT">¡¡ Tu cuenta ha sido actualizada correctamente !!.</string>
    <string name="MSG_UPDATE_AVATAR">¡¡ Tu avatar ha sido actualizado correctamente !!.</string>
    <string name="MSG_DELETE_ACCOUNT">¡¡ Tu cuenta ha sido eliminada permanentemente !!.</string>
    <string name="MSG_PERMISSION_GALLERY_REQUEST">Por favor permite que la app acceda al almacenamiento del dispositivo.</string>
    <string name="MSG_SET_LIKES_LIKE">¡¡ Ya se ha añadido esta receta a tu lista de favoritos !!.</string>
    <string name="MSG_SET_LIKES_DISLIKE">¿Ya no te gusta? Ya se ha eliminado esta receta de tu lista de favoritos.</string>

</resources>
