<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.food4health.presentation.Register.View.Register"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_margin="30dp"
                android:src="@drawable/f4h_logo"
                android:visibility="visible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:id="@+id/register_userName_aux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FR_NAME" />

                <EditText
                    android:id="@+id/register_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/FRH_NAME"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/register_userFistrLastName_aux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FR_LASTNAME1" />

                <EditText
                    android:id="@+id/register_userFistrLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/FRH_LASTNAME1"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/register_userSecondLastName_aux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FR_LASTNAME2" />

                <EditText
                    android:id="@+id/register_userSecondLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/FRH_LASTNAME2"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/register_userNIF_aux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FR_NIF" />

                <EditText
                    android:id="@+id/register_userNIF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/FRH_NIF"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/register_userMail_aux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FR_EMAIL" />

                <EditText
                    android:id="@+id/register_userMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/FRH_EMAIL"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/register_userPass_aux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FR_PASSWORD" />

                <EditText
                    android:id="@+id/register_userPass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/FRH_PASSWORD"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/register_userPass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/FRH_REPEAT_PASSWORD"
                    android:inputType="textPassword" />

                <ProgressBar
                    android:id="@+id/register_progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:visibility="invisible"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">
                    <Button
                        android:id="@+id/register_button"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:text="Button" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
