<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/orange_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.food4health.presentation.Login.View.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_margin="30dp"
                android:src="@drawable/f4h_logo"
                android:visibility="visible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:id="@+id/login_userMail_aux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FR_EMAIL" />

                <EditText
                    android:id="@+id/login_userMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/FRH_EMAIL"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/login_userPass_aux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FR_PASSWORD" />

                <EditText
                    android:id="@+id/login_userPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/FRH_PASSWORD"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/login_progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AVLoadingIndicatorView.Large"
                        android:visibility="invisible"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        app:indicatorName="PacmanIndicator"
                        app:indicatorColor="@color/colorBlue"
                    />

                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:id="@+id/login_button"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:text="@string/BTN_LOGIN"
                        app:bootstrapBrand="primary"
                        app:bootstrapSize="lg"
                        app:buttonMode="regular"
                        app:showOutline="false"
                        app:roundedCorners="true"
                    />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
